--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="#">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -17,8 +17,8 @@
       </nav>
       <address>
         <ul>
-          <li>info@devstudio.com</li>
-          <li>+11 (000) 111-11-11</li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -28,6 +28,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Benefits</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -106,7 +107,7 @@
       </section>
     </main>
     <footer>
-      <a href="#">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
